# function-calling-project

./: .gitignore  README.md  all_functions.txt  chi_functions.py  edward_functions.py  function_calling.ipynb  kevin_function.py  model_import.ipynb  pyproject.toml  ~$es_mt_output.xlsx
data/: Instruct Reference.xlsx
data_ks/: df_checkpoint_4.csv
es_instruct/: ModelFile  remove_results.py
es_instruct/dump_json/: date_difference.json  difference_of_squares.json  playlist_duration.json  zodiac_sign.json
eval/: evaluation.ipynb  organize_json.ipynb  run_eval.ipynb  sagemaker.ipynb  sagemaker_endpoint.ipynb  sagemaker_wo_langchain.ipynb
failed_queries/: evaluation.ipynb  failed_queries.json  generation.ipynb  rag_test.ipynb
failed_queries/dump_json/: failed_0.json  failed_1.json  failed_10.json  failed_11.json  failed_12.json  failed_13.json  failed_14.json  failed_15.json  failed_16.json  failed_17.json  failed_18.json  failed_19.json  failed_2.json  failed_20.json  failed_3.json  failed_4.json  failed_5.json  failed_6.json  failed_7.json  (+2 more)
front_end/: all_func.py  generator_for_fe.py  gradio_front_end.py  gradio_front_end_v2.py  langchain_tooluse_for_fe.py  prompt_tests.ipynb
function_calling/: all_func.py  all_functions.ipynb  chat_tool_chain.ipynb
function_sets/: chi_functions.py  kevin_function.py
ks_instruct/: generator.py  ollama_longchain.py  test.txt
notebook/: evaluation.ipynb  organize_json.ipynb  run_eval.ipynb  sagemaker_wo_langchain.ipynb  score_eval.ipynb
src/: MT_functions.py  chi_functions.py  evaluation.py  kevin_function.py
(+154 files in other folders)
