[tool.poetry]
name = "function-calling-project"
version = "0.1.0"
description = ""
authors = ["Chi So <42900702+ChiBerkeley@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.35.34"
langchain = "^0.3.2"
langchain-aws = "^0.2.2"
pandas = "^2.2.3"
yfinance = "^0.2.44"
scikit-learn = "^1.5.2"
deepeval = "^1.3.5"
fastapi = "^0.115.0"
pydantic = "^2.9.2"
openpyxl = "^3.1.5"
sagemaker = "^2.232.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
